--- a/static/main.css
+++ b/static/main.css
@@ -14,6 +14,7 @@
 body {
   font-family: "Open-Sans", Verdana, Helvetica, Sans-Serif;
   margin: 12px;
+  line-height: normal;
 }
 
 /** Fluid typography from https://css-tricks.com/snippets/css/fluid-typography/ */
